--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-toolbelt==0.0.1
 djangorestframework==3.7.7
 gunicorn==19.7.1
 psycopg2==2.7.4
+psycopg2-binary==2.7.4
 pytz==2018.3
 static3==0.7.0
 whitenoise==3.3.1
