--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
+certifi==2018.1.18
+chardet==3.0.4
 dj-database-url==0.5.0
 dj-static==0.0.6
 Django==2.0.2
 django-toolbelt==0.0.1
 djangorestframework==3.7.7
+future==0.16.0
 gunicorn==19.7.1
+idna==2.6
+line-bot-sdk==1.5.0
 psycopg2==2.7.4
 psycopg2-binary==2.7.4
 pytz==2018.3
+requests==2.18.4
 static3==0.7.0
+urllib3==1.22
 whitenoise==3.3.1
